Fixed overlays on mobile + Made pages non-resizable

--- a/css/chat-dark.scss
+++ b/css/chat-dark.scss
@@ -250,11 +250,11 @@ main {
 }
 
 #popup {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 2;
   background: rgba(0, 0, 0, 0.548);
   transition: ease-in-out 0.2s;
@@ -389,11 +389,11 @@ main {
 #flw-overlay {
   transition-duration: 0.2s;
   background: rgba(0, 0, 0, 0.548);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -565,11 +565,11 @@ main {
 #confirm-overlay {
   transition-duration: 0.2s;
   background: rgba(0, 0, 0, 0.548);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -639,11 +639,11 @@ main {
 #new-sub-overlay {
   transition-duration: 0.2s;
   background: rgba(0, 0, 0, 0.548);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -751,11 +751,11 @@ main {
 #new-chan-overlay {
   transition-duration: 0.2s;
   background: rgba(0, 0, 0, 0.548);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 2;
   display: flex;
   justify-content: center;
