--- a/css/chat-light.scss
+++ b/css/chat-light.scss
@@ -252,11 +252,11 @@ main {
 }
 
 #popup {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 10vh;
   z-index: 2;
   background: rgba(0, 0, 0, 0.548);
   transition: ease-in-out 0.2s;
@@ -392,11 +392,11 @@ main {
 #flw-overlay {
   transition-duration: 0.2s;
   background: rgba(0, 0, 0, 0.548);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -570,11 +570,11 @@ main {
 #confirm-overlay {
   transition-duration: 0.2s;
   background: rgba(0, 0, 0, 0.548);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -645,11 +645,11 @@ main {
 #new-sub-overlay {
   transition-duration: 0.2s;
   background: rgba(0, 0, 0, 0.548);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -758,11 +758,11 @@ main {
 #new-chan-overlay {
   transition-duration: 0.2s;
   background: rgba(0, 0, 0, 0.548);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 2;
   display: flex;
   justify-content: center;
